src/test/deca/context/invalid/class/invalid_instanceof2.deca
// Description:
//    Test of instanceof with a non-class type (int).
//    Test rule 3.40
//
// Result:
// [Begin Result]
//invalid_instanceof2.deca:25:26: Left operand of 'instanceof' must be an object or null. Rule 3.40.

// [End Result]
//
//    created on 13/01/2025


class MyClass {
    int age;
    int hello() {
            println("Hello World !");
            return 1;
        }
}

{
    int test=2;
    MyClass a = new MyClass();
    boolean result = test instanceof MyClass; // the first operand must be a class
}

